# RedsWhale

./: .env.example  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  SECURITY.md
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml  build.rs
crates/tui/src/: config.rs  jit_context.rs  main.rs  pricing.rs  prompts.rs  settings.rs  task_manager.rs  topic.rs
crates/tui/src/client/: chat.rs
crates/tui/src/core/: engine.rs
crates/tui/src/tools/: ask_user.rs  enter_plan_mode.rs  exit_plan_mode.rs  mod.rs
crates/tui/src/tui/: footer_ui.rs  markdown_render.rs  ui.rs
crates/tui/src/tui/onboarding/: mod.rs
crates/tui/src/tui/widgets/: header.rs  mod.rs
