[package]
name = "deepseek-tui-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style CLI facade for DeepSeek workspace architecture"

#260520 Red 二进制改名为 RedsWhale
[[bin]]
name = "RedsWhale"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
deepseek-agent = { path = "../agent", version = "0.0.6" }
deepseek-app-server = { path = "../app-server", version = "0.0.6" }
deepseek-config = { path = "../config", version = "0.0.6" }
deepseek-execpolicy = { path = "../execpolicy", version = "0.0.6" }
deepseek-mcp = { path = "../mcp", version = "0.0.6" }
deepseek-secrets = { path = "../secrets", version = "0.0.6" }
deepseek-state = { path = "../state", version = "0.0.6" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tokio.workspace = true
sha2.workspace = true
tempfile = "3.16"
tracing.workspace = true

[dev-dependencies]
